BMSSimplificationEclipseWS/murugesh.naidu@EUFULL-TrackerUpdates/src/objects/EM_Event_vod__c.object
<CustomObject>
    <fields>
        <fullName>Online_Registrant_Count_vod__c</fullName>
        <description>Count of the number of attendees registering via a web portal.</description>
        <label>Online Registrant Count</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Online_Registration_Fields_vod__c</fullName>
        <description>Used to store fields that are required by online registrants for this particular event. If using the Veeva API to create attendees from an online portal, the API will validate that these fields are required when posting the attendee information to Salesforce. Format is: ;FieldName1;FieldName2;...FieldNameX;</description>
        <label>Online Registration Fields</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Override_Lock_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used by triggers. If checked, the lock is deactivated.</description>
        <label>Override Lock</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Owner_Name_Formula_HCPTS__c</fullName>
        <formula>Owner:User.FirstName + &quot; &quot; + Owner:User.LastName</formula>
        <label>Owner Name Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Event_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Links events together in a series.</description>
        <label>Parent Event</label>
        <referenceTo>EM_Event_vod__c</referenceTo>
        <relationshipLabel>EM Events</relationshipLabel>
        <relationshipName>EM_Event_Parent_Event_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Phase_HCPTS__c</fullName>
        <description>Phase of Activity</description>
        <label>Phase</label>
        <picklist>
            <picklistValues>
                <fullName>Planning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Execution</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Close Out</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Postal_Code_vod__c</fullName>
        <description>Postal code of an event. If using a venue list, this is filled in automatically.</description>
        <label>Postal Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Processor_Country_HCPTS__c</fullName>
        <description>Field used in workflow to stamp Processor Country on Activity for reporting purposes</description>
        <label>Service Coordinator Country</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Processor_Email_HCPTS__c</fullName>
        <description>Field used in workflow to stamp Processor Email on Activity for reporting purposes</description>
        <label>Service Coordinator Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Processor_HCPTS__c</fullName>
        <description>Name of Service Coordinator for Activity</description>
        <label>Service Coordinator</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Processor_Phone_HCPTS__c</fullName>
        <description>Field used in workflow to stamp Processor Phone on Activity for reporting purposes</description>
        <label>Service Coordinator Phone</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_HCPTS__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the Interact Product Catalog</description>
        <label>Product/Therapeutic Area</label>
        <referenceTo>Product_vod__c</referenceTo>
        <relationshipName>Activities1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Promotional_HCPTS__c</fullName>
        <description>Field to indicate if Activity is for Promotional or Non-Promotional purposes</description>
        <label>Promotional/Non-Promotional</label>
        <picklist>
            <picklistValues>
                <fullName>Promotional</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-Promotional</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Secondary_Product_TA_Simplified__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Added for EM 2.0</description>
        <label>Secondary Product/TA</label>
        <referenceTo>Product_vod__c</referenceTo>
        <relationshipName>EM_Activities_Secondary</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Send_Activity_Details_Report_Email__c</fullName>
        <description>Link to send email containing Conga Report for Activity Details</description>
        <formula>HYPERLINK( 

&quot;https://composer.congamerge.com/composer8/index.html?SessionId=&quot; 
+ $Api.Session_ID + &quot;&amp;ServerURL=&quot; + $Api.Partner_Server_URL_290 + 
&quot;&amp;id=&quot; + Id + 
&quot;&amp;QueryID=[ServicesList]&quot; + $Setup.Conga_and_Echosign_Ids__c.ContractAndRelationsForServices__c + &quot;?pv0=&quot; + Id + &quot;,&quot; + 
&quot;[SponsorshipList]&quot; + $Setup.Conga_and_Echosign_Ids__c.ContractAndRelationsForSponsorship__c + &quot;?pv0=&quot; + Id + &quot;,&quot; + 
&quot;[EventsList]&quot; + $Setup.Conga_and_Echosign_Ids__c.ContractAndRelationsForEvents__c + &quot;?pv0=&quot; + Id + &quot;,&quot; + 
&quot;[Activity]&quot; + $Setup.Conga_and_Echosign_Ids__c.ActivityDetails__c + &quot;?pv0=&quot; + Id + &quot;,&quot; + 
&quot;[TeamMembers]&quot; + $Setup.Conga_and_Echosign_Ids__c.Activity_Details_Team_Members__c + &quot;?pv0=&quot; + Id + &quot;,&quot; + 
&quot;[Materials]&quot; + $Setup.Conga_and_Echosign_Ids__c.Materials_for_Event__c + &quot;?pv0=&quot; + Id + &quot;,&quot; + 
&quot;[ExpEstimates]&quot; + $Setup.Conga_and_Echosign_Ids__c.Activity_Details_Exp_Estimates__c + &quot;?pv0=&quot; + Id + &quot;,&quot; + 
&quot;[Audience]&quot; + $Setup.Conga_and_Echosign_Ids__c.Activity_Details_Audience__c + &quot;?pv0=&quot; + Id + &quot;,&quot; + 
&quot;[Participants]&quot; + $Setup.Conga_and_Echosign_Ids__c.ActivityDetailsParticipants__c + &quot;?pv0=&quot; + Id +
&quot;&amp;CongaEmailTemplateId=&quot; + $Setup.Conga_and_Echosign_Ids__c.Activity_Details_Template__c + 
&quot;&amp;EmailSubject=Activity+Details&quot; + 
&quot;&amp;TemplateID=&quot; + $Setup.Conga_and_Echosign_Ids__c.Activity_Details__c + 
&quot;&amp;DS7=2&quot; + 
&quot;&amp;DefaultPDF=1&quot; 
, Activity_ID_2_HCPTS__c ,&quot;_blank&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Send Event Details Report Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Speaker_Meeting_HCPTS__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, indicates this event includes a Speaker Meeting</description>
        <inlineHelpText>If checked, indicates this event includes a Speaker Meeting</inlineHelpText>
        <label>Speaker Meeting</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sponsor_vod__c</fullName>
        <description>Sponsor of event</description>
        <label>Sponsor</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Starcite_ID_HCPTS__c</fullName>
        <description>Logistics Provider ID</description>
        <label>Logistics ID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Starcite_Id_2_HCPTS__c</fullName>
        <description>2nd Logistics ID to be used in Backend</description>
        <externalId>true</externalId>
        <inlineHelpText>2nd Logistics ID to be used in Backend</inlineHelpText>
        <label>Logistics ID 2</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Starcite_Request_Status__c</fullName>
        <description>Status Picklist for Starcite Interface.</description>
        <inlineHelpText>Select “Request Estimates” if the meeting is to be registered in Logistic Provider (Logistic) prior to approval to get initial estimates from the logistics provider.</inlineHelpText>
        <label>Logistics Request Status</label>
        <picklist>
            <picklistValues>
                <fullName>Request Estimates</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Meeting Registration Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Meeting Registration Complete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Meeting Registration Updated</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Start_Date_Formula_HCPTS__c</fullName>
        <formula>DATEVALUE(Start_Time_vod__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Start Date (Formula)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Start_Date_HCPTS__c</fullName>
        <description>Activity Start Date</description>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Start_Time_vod__c</fullName>
        <description>Start time of the event.</description>
        <label>Start Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>State_Province_HCPTS__c</fullName>
        <description>Confirmed Venue State fed from Integration</description>
        <inlineHelpText>Confirmed Venue State fed from Integration</inlineHelpText>
        <label>Confirmed Venue State / Province</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State_Province_vod__c</fullName>
        <description>State or province of an event. If using a venue list, this is filled in automatically.</description>
        <label>State / Province</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_vod__c</fullName>
        <description>Status of an event. Custom values can be added.</description>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Canceled_vod</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed_vod</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Service Coordinator Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Planning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Execution</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Closeout</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Draft</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>In Business Approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Post-Execution</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pre-Event</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Post-Event</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved_vod</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected_vod</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending_Approval_vod</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Post-Event-PostApproval</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Stub_Mobile_Id_vod__c</fullName>
        <description>System field used by mobile products to aid synchronization.</description>
        <externalId>true</externalId>
        <label>Stub Mobile Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Stub_SFDC_Id_vod__c</fullName>
        <description>System field used by mobile products to aid synchronization.</description>
        <externalId>true</externalId>
        <label>Stub SFDC Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Subtype_HCPTS__c</fullName>
        <description>Subtype</description>
        <label>Subtype</label>
        <picklist>
            <picklistValues>
                <fullName>Speaker Meeting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advisory Board</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sponsorship</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>R&amp;D Committee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exhibits, Booths &amp; Display</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Speaker, Sponsorship, Exhibits</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Speaker, Sponsorship</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Speaker, Exhibits</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sponsorship, Exhibits</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Topic_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Topic</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>EM_Catalog_vod__c.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>Event_Topic_vod</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>EM_Catalog_vod__c</referenceTo>
        <relationshipName>EM_Event_Topic_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Travel_Accomodations_HCPTS__c</fullName>
        <description>Text Area for Starcite Interface.</description>
        <inlineHelpText>Identify the air and rail requirements as well as the accommodation for the participants if available.</inlineHelpText>
        <label>Travel and Accommodations</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>User_Attendee_Fields_vod__c</fullName>
        <description>Copy the fields that display on the User List on the Attendee Selection page from EM_Event_Rule_vod. Fields can be fields that exist on the User object, or keywords that display special sections, such as recent events.</description>
        <label>User Attendee Fields</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Vendor_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Main logistics vendor being used on an event. A vendor on the event will automatically be added as a team member. If the vendor is a user, that user will be given edit permission to the event.</description>
        <label>Vendor</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>EM_Vendor_vod__c.Status_vod__c</field>
                <operation>equals</operation>
                <value>Eligible_vod</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>EM_Vendor_vod__c</referenceTo>
        <relationshipName>EM_Event_Vendor_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Venue_Support_HCPTS__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Select if sourcing (venue) support is required from Logistics provider</inlineHelpText>
        <label>Sourcing Support</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Venue_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The venue where the event is taking place.</description>
        <label>Venue Lookup</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>EM_Venue_vod__c.Status_vod__c</field>
                <operation>equals</operation>
                <value>Eligible_vod</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>EM_Venue_vod__c</referenceTo>
        <relationshipName>EM_Event_Venue_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Walk_In_Count_vod__c</fullName>
        <description>Count of the number of walk-in attendees for an event</description>
        <label>Walk-In Count</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Walk_In_Fields_vod__c</fullName>
        <description>Used to store fields that are entered by walk-in attendees. Format is: ;FieldName1;FieldName2;...FieldNameX;
Fields can be marked as &quot;Required&quot; on the walk-in form by adding a &lt;R&gt; tag after a field name. For example, ;Last_Name_vod&lt;R&gt;;First_Name_vod&lt;R&gt;;Email_vod&lt;R&gt;;</description>
        <label>Walk-In Fields</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WasApproved_HCPTS__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Behind the scenes field to indicate that this activity was approved at some point</description>
        <inlineHelpText>Behind the scenes field to indicate that this activity was approved at some point</inlineHelpText>
        <label>WasApproved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Web_Source_vod__c</fullName>
        <description>Web source of event</description>
        <label>Web Source</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>zvod_Event_Layout_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used for configuration and debugging. Place this field on every event layout to see the name of the layout being used. Only admins should have visibility to this field.</description>
        <label>Event Layout</label>
        <type>Checkbox</type>
    </fields>
    <label>EM Event</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Activity_ID_2_HCPTS__c</columns>
        <columns>NAME</columns>
        <columns>Activity_Type_Formula_HCPTS__c</columns>
        <columns>Status_vod__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>CREATED_DATE</columns>
        <columns>Country_vod__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Activities</fullName>
        <columns>NAME</columns>
        <columns>Status_vod__c</columns>
        <columns>Activity_Type_Formula_HCPTS__c</columns>
        <columns>Processor_HCPTS__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All Events</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>BE00000000000_CMPY</roleAndSubordinates>
            <roleAndSubordinates>NL00000000000_CMPY</roleAndSubordinates>
            <roleAndSubordinates>UI00000000000_CMPY</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Events_DE</fullName>
        <columns>NAME</columns>
        <columns>Status_vod__c</columns>
        <columns>Activity_Type_Formula_HCPTS__c</columns>
        <columns>Processor_HCPTS__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All Activities</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>DE00000000000_CMPY</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Approved</fullName>
        <columns>NAME</columns>
        <columns>Activity_Type_Formula_HCPTS__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status_vod__c</field>
            <operation>equals</operation>
            <value>Approved_vod</value>
        </filters>
        <label>Approved</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>BE00000000000_CMPY</roleAndSubordinates>
            <roleAndSubordinates>BX00000000000_CMPY</roleAndSubordinates>
            <roleAndSubordinates>NL00000000000_CMPY</roleAndSubordinates>
            <roleAndSubordinates>UI00000000000_CMPY</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Archived</fullName>
        <columns>NAME</columns>
        <columns>Created_By__c</columns>
        <columns>Activity_Type_Formula_HCPTS__c</columns>
        <columns>Location_vod__c</columns>
        <columns>Audio_Visual_Support_HCPTS__c</columns>
        <columns>Venue_Support_HCPTS__c</columns>
        <columns>Starcite_ID_HCPTS__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status_vod__c</field>
            <operation>equals</operation>
            <value>Closed_vod</value>
        </filters>
        <label>Archived</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Canceled</fullName>
        <columns>NAME</columns>
        <columns>Created_By__c</columns>
        <columns>Activity_Type_Formula_HCPTS__c</columns>
        <columns>Location_vod__c</columns>
        <columns>Audio_Visual_Support_HCPTS__c</columns>
        <columns>Venue_Support_HCPTS__c</columns>
        <columns>Starcite_ID_HCPTS__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status_vod__c</field>
            <operation>equals</operation>
            <value>Canceled_vod</value>
        </filters>
        <label>Canceled</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>In_Closeout</fullName>
        <columns>NAME</columns>
        <columns>Created_By__c</columns>
        <columns>Activity_Type_Formula_HCPTS__c</columns>
        <columns>Location_vod__c</columns>
        <columns>Audio_Visual_Support_HCPTS__c</columns>
        <columns>Venue_Support_HCPTS__c</columns>
        <columns>Starcite_ID_HCPTS__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status_vod__c</field>
            <operation>equals</operation>
            <value>In Closeout</value>
        </filters>
        <label>In Closeout</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>DE00000000000_CMPY</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>In_Draft</fullName>
        <columns>NAME</columns>
        <columns>Activity_Type_Formula_HCPTS__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status_vod__c</field>
            <operation>equals</operation>
            <value>In Draft</value>
        </filters>
        <label>In Draft</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>DE00000000000_CMPY</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>In_Execution</fullName>
        <columns>NAME</columns>
        <columns>Created_By__c</columns>
        <columns>Activity_Type_Formula_HCPTS__c</columns>
        <columns>Location_vod__c</columns>
        <columns>Audio_Visual_Support_HCPTS__c</columns>
        <columns>Venue_Support_HCPTS__c</columns>
        <columns>Starcite_ID_HCPTS__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status_vod__c</field>
            <operation>equals</operation>
            <value>In Execution</value>
        </filters>
        <label>In Execution</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>DE00000000000_CMPY</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>In_Planning</fullName>
        <columns>NAME</columns>
        <columns>Activity_Type_Formula_HCPTS__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status_vod__c</field>
            <operation>equals</operation>
            <value>In Planning</value>
        </filters>
        <label>In Planning</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>DE00000000000_CMPY</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>In_Post_Execution</fullName>
        <columns>NAME</columns>
        <columns>Created_By__c</columns>
        <columns>Activity_Type_Formula_HCPTS__c</columns>
        <columns>Location_vod__c</columns>
        <columns>Audio_Visual_Support_HCPTS__c</columns>
        <columns>Venue_Support_HCPTS__c</columns>
        <columns>Starcite_ID_HCPTS__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status_vod__c</field>
            <operation>equals</operation>
            <value>In Post-Execution</value>
        </filters>
        <label>In Post-Execution</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>DE00000000000_CMPY</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>In_Service_Coordinator_Review</fullName>
        <columns>NAME</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Activity_Type_Formula_HCPTS__c</columns>
        <columns>Status_vod__c</columns>
        <columns>Processor_HCPTS__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status_vod__c</field>
            <operation>equals</operation>
            <value>In Service Coordinator Review</value>
        </filters>
        <label>In Service Coordinator Review</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>DE00000000000_CMPY</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Pending_Approval</fullName>
        <columns>NAME</columns>
        <columns>Activity_Type_Formula_HCPTS__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status_vod__c</field>
            <operation>equals</operation>
            <value>Pending_Approval_vod</value>
        </filters>
        <label>Pending Approval</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>BE00000000000_CMPY</roleAndSubordinates>
            <roleAndSubordinates>BX00000000000_CMPY</roleAndSubordinates>
            <roleAndSubordinates>NL00000000000_CMPY</roleAndSubordinates>
            <roleAndSubordinates>UI00000000000_CMPY</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Post_Event</fullName>
        <columns>NAME</columns>
        <columns>Activity_Type_Formula_HCPTS__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status_vod__c</field>
            <operation>equals</operation>
            <value>Post-Event,Post-Event-PostApproval</value>
        </filters>
        <label>Post-Event</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>BE00000000000_CMPY</roleAndSubordinates>
            <roleAndSubordinates>BX00000000000_CMPY</roleAndSubordinates>
            <roleAndSubordinates>NL00000000000_CMPY</roleAndSubordinates>
            <roleAndSubordinates>UI00000000000_CMPY</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Pre_Event</fullName>
        <columns>NAME</columns>
        <columns>Activity_Type_Formula_HCPTS__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status_vod__c</field>
            <operation>equals</operation>
            <value>Pre-Event</value>
        </filters>
        <label>Pre-Event</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>BE00000000000_CMPY</roleAndSubordinates>
            <roleAndSubordinates>BX00000000000_CMPY</roleAndSubordinates>
            <roleAndSubordinates>NL00000000000_CMPY</roleAndSubordinates>
            <roleAndSubordinates>UI00000000000_CMPY</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Event Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>EM Events</pluralLabel>
    <recordTypes>
        <fullName>Advisory_Board</fullName>
        <active>true</active>
        <description>An activity involving a group of experts retained to provide advice to BMS.</description>
        <label>Advisory_Board</label>
    </recordTypes>
    <recordTypes>
        <fullName>Congress_vod</fullName>
        <active>false</active>
        <description>Congress</description>
        <label>Congress_vod</label>
    </recordTypes>
    <recordTypes>
        <fullName>Cross_Org</fullName>
        <active>true</active>
        <description>Activity Type used to prepare documentation only for an HCP to participate in a Cross-Org Activity</description>
        <label>Cross_Org</label>
    </recordTypes>
    <recordTypes>
        <fullName>Event_Purchase</fullName>
        <active>true</active>
        <description>Event Purchases allow conducting a Speaker meeting, HCP Sponsorship &amp; Exhibits Display all under one umbrella</description>
        <label>Event_Purchase</label>
    </recordTypes>
    <recordTypes>
        <fullName>Exhibits_Booths_and_Displays</fullName>
        <active>true</active>
        <description>An activity to rent floor space at medical or scientific events for communication and/or display of BMS or disease related information.</description>
        <label>Exhibits_Booths_and_Displays</label>
    </recordTypes>
    <recordTypes>
        <fullName>HCP_Sponsorship</fullName>
        <active>true</active>
        <description>An activity where BMS pays, wholly or partially for hospitality and registration cost of HCPs  to attend Congresses or other Medical Events</description>
        <label>HCP_Sponsorship</label>
    </recordTypes>
    <recordTypes>
        <fullName>Internal_Speaking</fullName>
        <active>true</active>
        <description>An activity where a contracted individual(s) speaks to an internal BMS audience</description>
        <label>Internal_Speaking</label>
    </recordTypes>
    <recordTypes>
        <fullName>Investigator_Meeting_vod</fullName>
        <active>false</active>
        <description>Investigator meeting</description>
        <label>Investigator_Meeting_vod</label>
    </recordTypes>
    <recordTypes>
        <fullName>Other_Consulting</fullName>
        <active>true</active>
        <description>An activity to provide guidance or a tangible work product to BMS that is not in relation to any other activity listed here</description>
        <label>Other_Consulting</label>
    </recordTypes>
    <recordTypes>
        <fullName>Preceptorship</fullName>
        <active>true</active>
        <description>An activity that provides an HCP with practical experience under the instruction of another HCP(s), typically in an institution setting.</description>
        <label>Preceptorship</label>
    </recordTypes>
    <recordTypes>
        <fullName>R_D_Committee</fullName>
        <active>true</active>
        <description>An activity where a group of contracted individuals are retained by BMS to participate in committees in connection with a clinical trial (e.g. DMC, SSC)</description>
        <label>R&amp;D Committee</label>
    </recordTypes>
    <recordTypes>
        <fullName>Round_Table_vod</fullName>
        <active>false</active>
        <description>Round table program</description>
        <label>Round_Table_vod</label>
    </recordTypes>
    <recordTypes>
        <fullName>Simple_Activity_HCPTS</fullName>
        <active>true</active>
        <description>Activity type to support Simplification</description>
        <label>Simple Activity</label>
    </recordTypes>
    <recordTypes>
        <fullName>Speaker_Meeting</fullName>
        <active>true</active>
        <description>An activity where an individual(s) speaks to an external audience on behalf of BMS.</description>
        <label>Speaker_Meeting</label>
    </recordTypes>
    <recordTypes>
        <fullName>Speaker_Program_vod</fullName>
        <active>false</active>
        <description>Speaker Program</description>
        <label>Speaker_Program_vod</label>
    </recordTypes>
    <recordTypes>
        <fullName>Speaker_Series</fullName>
        <active>false</active>
        <description>A series of Speaker Meetings where an individual(s) speaks to an external audience on behalf of BMS.</description>
        <label>Speaker_Series</label>
    </recordTypes>
</CustomObject>